--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ sourceCompatibility = 1.8
 repositories {
     jcenter()
     maven{url "http://kotlin.bintray.com/ktor"}
+    maven{url "https://dl.bintray.com/kotlin/exposed"}
+    maven{url 'https://mvnrepository.com/artifac/'}
     mavenCentral()
 }
 
@@ -35,6 +37,8 @@ dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "ch.qos.logback:logback-classic:1.2.1"
     compile "io.ktor:ktor-gson:$ktor_version"
+    compile 'org.jetbrains.exposed:exposed:0.10.2'
+    compile "mysql:mysql-connector-java:5.1.46"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
