--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ repositories {
     maven{url "http://kotlin.bintray.com/ktor"}
     maven{url "https://dl.bintray.com/kotlin/exposed"}
     maven{url 'https://mvnrepository.com/artifac/'}
+    maven{url "https://mvnrepository.com/artifact/com.zaxxer/HikariCP"}
     mavenCentral()
 }
 
@@ -39,6 +40,7 @@ dependencies {
     compile "io.ktor:ktor-gson:$ktor_version"
     compile 'org.jetbrains.exposed:exposed:0.10.2'
     compile "mysql:mysql-connector-java:5.1.46"
+    compile "com.zaxxer:HikariCP:3.1.0"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
