--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 buildscript {
     ext.kotlin_version = '1.2.41'
     ext.ktor_version = '0.9.1'
+    ext.tomcat_plugin_version = '2.4.2'
+    ext.tomcat_version = '9.0.4'
 
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.bmuschko:gradle-tomcat-plugin:2.5"
     }
 }
 
@@ -18,9 +21,21 @@ group 'com.saviaevinicius'
 version '1'
 
 apply plugin: 'kotlin'
-apply plugin: 'application'
+apply plugin: 'war'
+apply plugin: 'com.bmuschko.tomcat'
 
-mainClassName = 'io.ktor.server.netty.DevelopmentEngine'
+webAppDirName = 'webapp'
+
+tomcat {
+    contextPath = '/'
+    httpProtocol = 'org.apache.coyote.http11.Http11Nio2Protocol'
+    ajpProtocol  = 'org.apache.coyote.ajp.AjpNio2Protocol'
+}
+
+sourceSets {
+    main.kotlin.srcDirs = ['src']
+    main.resources.srcDirs = ['resources']
+}
 
 sourceCompatibility = 1.8
 
@@ -34,8 +49,11 @@ repositories {
 }
 
 dependencies {
+    tomcat "org.apache.tomcat.embed:tomcat-embed-core:$tomcat_version",
+            "org.apache.tomcat.embed:tomcat-embed-jasper:$tomcat_version"
+
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "io.ktor:ktor-server-netty:$ktor_version"
+    compile "io.ktor:ktor-server-servlet:$ktor_version"
     compile "ch.qos.logback:logback-classic:1.2.1"
     compile "io.ktor:ktor-gson:$ktor_version"
     compile 'org.jetbrains.exposed:exposed:0.10.2'
@@ -50,3 +68,5 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
+task run(dependsOn: tomcatRun)
